# Olimpo

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: ci-pipeline.yml  ci.yml  deploy-prod.yml  deploy-staging.yml
.vercel/: project.json
apps/admin/: .env.example  Dockerfile  main.py  package.json  pyproject.toml  pyrightconfig.json  railway.toml
apps/admin-web/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
apps/admin-web/app/: layout.tsx
apps/admin-web/hooks/: use-director.ts  use-licencias.ts  use-tenants.ts
apps/admin-web/lib/: api-client.ts  schemas.ts
apps/admin/core/: auth.py  config.py  crypto.py  database.py
apps/admin/routers/: auth.py  licencias.py  observabilidad.py  stats.py  tenants.py  usuarios_maestros.py
apps/api/: .dockerignore  .env.example  Dockerfile  celery_app.py  main.py  package.json  pyproject.toml  pyrightconfig.json  railway.toml  requirements-dev.txt  requirements.txt
apps/api/core/: auth.py  busqueda.py  config.py  database.py  llm_client.py  logging.py
apps/api/models/: agente.py  asignacion.py  campana.py  comision.py  comunicacion.py  correo.py  pagination.py  permiso.py  poliza.py  prospecto.py  tramite.py  usuario.py
apps/api/routers/: activaciones.py  agentes.py  asignaciones.py  bi.py  campanas.py  coberturas.py  comisiones.py  comunicaciones.py  correos.py  gmail_webhook.py  health.py  notificaciones.py  observabilidad.py  permisos.py  pipeline.py  polizas.py  prospectos.py  slas.py  test_ia.py  tramites.py  usuarios.py
apps/api/tests/: conftest.py  test_auth.py  test_endpoints_estructura.py  test_health.py  test_integration_auth_apikey.py  test_integration_tramites.py  test_llm_client.py  test_pagination.py  test_regresiones.py  test_state_machine.py
apps/web/: .env.local.example  .eslintrc.json  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
docs/deployment/: GUIA_DEPLOY.md  GUIA_DEPLOY_PASO_A_PASO.md
infra/railway/: package.json
infra/supabase/: olimpo_all_migrations.sql
supabase/: config.toml
supabase/templates/: recovery.html
(+166 files in other folders)
