[project]
name = "olimpo-api"
version = "0.1.0"
description = "Backend FastAPI para Olimpo CRM"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.8",
    "supabase>=2.10",
    "asyncpg>=0.30",
    "PyJWT[crypto]>=2.10",
    "logfire[fastapi]>=3.0",
    "structlog>=25.0",
    "sentry-sdk[fastapi]>=2.20",
    "tenacity>=9.0",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "litellm>=1.60.0",
    "google-generativeai>=0.8.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requiere conexión a Supabase real (deselect con -m 'not integration')",
]

[tool.pyright]
pythonVersion = "3.12"
strict = true
